<resources>
    <string name="app_name">FoodApp-Challenge-Binar</string>
    <string name="text_resto_terdekat">Closest</string>
    <string name="textpromo">Promo</string>
    <string name="text_terlaris">Popular</string>
    <string name="text_menu_hemat">Cheap Menu</string>
    <string name="content_description" translatable="false">Image</string>
    <string name="text_fried_chicken_kriuk" translatable="false">Fried Chicken Kriuk</string>
    <string name="text_rp_50_000" translatable="false">Rp 50.000</string>
    <string name="text_explore_menu_makanan">Explore Food Menu</string>
    <string name="text_promo_9_9" translatable="false">Promo 9.9</string>
    <string name="text_banner_desc" translatable="false">Yuk segera manfaatkan promo spesial 9.9 kami! Dapatkan makanan lezat dengan harga terbaik hari ini. Jangan lewatkan kesempatan istimewa ini!</string>
    <string name="text_hai_raveendra" translatable="false">Hai Raveendra</string>
    <string name="text_membership_gold" translatable="false">Membership gold</string>
    <string name="text_groceries" translatable="false">Kebutuhan</string>
    <string name="text_promo">Promo</string>
    <string name="text_drink">Drink</string>
    <string name="text_ayam_bakar_pak_haji" translatable="false">Ayam Bakar Pak haji</string>
    <string name="text_mie_goreng_jawa" translatable="false">Mie Goreng Jawa</string>
    <string name="text_dimsum_sinyo" translatable="false">Dimsum Sinyo</string>

    <string name="text_1">1</string>
    <string name="text_add_to_cart">Add To Cart - %s</string>
    <string name="text_location_detail">%s (Click to see location)</string>
    <string name="text_success_add_to_cart">Success put Item to Cart</string>
    <string name="label_location">Location</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_checkout">Checkout</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_total_quantity" translatable="false">x%s</string>
    <string name="label_empty_state">Data Empty</string>

    <string name="label_profile_name">Name</string>
    <string name="label_profile_name_value" translatable="false">Raveendra Dimsum</string>
    <string name="label_profile_email" translatable="false">Email</string>
    <string name="label_profile_email_value" translatable="false">qoolqas@gmail.com</string>
    <string name="label_profile_phone">Phone Number</string>
    <string name="label_profile_phone_value" translatable="false">08959292929</string>

    <string name="title_profile">Profile</string>
    <string name="label_checkout_success">Success Checkout your food</string>

    <string name="label_something_wrong">Terjadi kesalahan</string>
    <string name="label_note">Note</string>
    <string name="label_note_with_string" translatable="false">notes : %s</string>
    <string name="label_total">Total Price</string>
    <string name="label_checkout">Checkout</string>
    <string name="label_delivery_method">Delivery Method</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_take_out">Take away</string>
    <string name="label_delivery">Delivery</string>
    <string name="label_emoney">E Money</string>
    <string name="label_cash">Cash</string>
    <string name="label_okay" translatable="false">Okay</string>


    <string name="hint_name">Your name</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_confirm_password" translatable="false">Confirm Password</string>

    <string name="text_log_in" translatable="false">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register" translatable="false">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile" translatable="false">Change Profile</string>
    <string name="text_change_password" translatable="false">Change Password</string>
    <string name="text_logout" translatable="false">Logout</string>
    <string name="label_not_login">You\'re not login yet</string>
</resources>