<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/inclToolbar"
        layout="@layout/layout_general_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/inclToolbar">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_dimsum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProfileName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:textColorHint="@color/app_color_primary_container"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/app_color_on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8_dp"
                android:inputType="none"
                android:enabled="false"
                android:hint="@string/label_profile_name"
                android:paddingBottom="@dimen/dimen_16_dp"
                android:text="@string/label_profile_name_value"
                android:textColor="@color/app_color_tertiary_container"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProfileEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:textColorHint="@color/app_color_primary_container"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/app_color_on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilProfileName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8_dp"
                android:inputType="none"
                android:enabled="false"
                android:hint="@string/label_profile_email"
                android:paddingBottom="@dimen/dimen_16_dp"
                android:text="@string/label_profile_email_value"
                android:textColor="@color/app_color_tertiary_container"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>