<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBanner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/content_description"
                android:scaleType="centerCrop"
                android:src="@drawable/img_chicken"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="H,21:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:alpha="0.5"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/ivBanner"
                app:layout_constraintEnd_toEndOf="@id/ivBanner"
                app:layout_constraintStart_toStartOf="@id/ivBanner"
                app:layout_constraintTop_toTopOf="@+id/ivBanner" />

            <TextView
                android:id="@+id/tvBannerPromo"
                style="@style/TextMedium24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/text_promo_9_9"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tvBannerDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvBannerDesc"
                style="@style/TextRegular12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_banner_desc"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/ivBanner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>